reworked concept of post-processing scripts: multiple scripts can be assigned to each nzb-file; all assigned scripts are executed after the nzb-file is downloaded and internally processed (unpack, repair); option <PostProcess> is obsolete; new option <ScriptDir> sets directory where all pp-scripts must be stored; new option <DefScript> sets the default list of pp-scripts to be assigned to nzb-file when it's added to queue; new option <CategoryX.DefScript> to set the default list of pp-scripts on a category basis; the execution order of pp-scripts can be set using new option <ScriptOrder>; there are no separate configuration files for pp-scripts; configuration options and pp-parameters are defined in the pp-scripts; script configuration options are saved in nzbget configuration file (nzbget.conf); changed parameters list of RPC-methods <loadconfig> and <saveconfig>; new RPC-method <configtemplates> returns configuration descriptions for the program and for all pp-scripts; configuration of all scripts can be done in web-interface; the pp-scripts assigned to a particular nzb-file can be viewed and changed in web-interface on page <pp-parameters> in the edit download dialog; option <PostPauseQueue> renamed to <ScriptPauseQueue> (the old name is still recognized); new option <ConfigTemplate> to define the location of template configuration file (in previous versions it must be always stored in <WebDir>)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@629 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -61,6 +61,21 @@ QueueDir=${MainDir}/queue
 # Directory to store temporary files.
 TempDir=${MainDir}/tmp
 
+# Directory with web-interface files.
+#
+# Example: /usr/local/share/nzbget/webui.
+#
+# NOTE: To disable web-interface set the option to an empty value.
+# This however doesn't disable the built-in web-server completely because
+# it is also used to serve JSON-/XML-RPC requests.
+WebDir=
+
+# Directory with post-processing scripts.
+#
+# NOTE: For information on writing post-processing scripts visit
+# http://nzbget.sourceforge.net/Post-processing_scripts.
+ScriptDir=${MainDir}/ppscripts
+
 # Lock-file for daemon-mode, POSIX only.
 #
 # If the option is not empty, NZBGet creates the file and writes process-id
@@ -72,14 +87,19 @@ LockFile=${MainDir}/nzbget.lock
 # NOTE: See also option <CreateLog>.
 LogFile=${DestDir}/nzbget.log
 
-# Directory with web-interface files.
+# Configuration file template.
 #
-# Example: "WebDir=/usr/local/share/nzbget/webui".
+# Put the path to the example configuration file which comes with
+# NZBGet. Web-interface needs this file to read option descriptions.
 #
-# NOTE: To disable web-interface set the option to an empty value.
-# This however doesn't disable the built-in web-server completely because
-# it is also used to serve JSON-/XML-RPC requests.
-WebDir=
+# Do not put here your actual configuration file (typically stored
+# in your home directory or in /etc/nzbget.conf) but instead the unchanged
+# example configuration file (typically installed to
+# /usr/local/share/nzbget/nzbget.conf).
+#
+# Example: /usr/local/share/nzbget/nzbget.conf.
+ConfigTemplate=
+
 
 ##############################################################################
 ### NEWS-SERVERS                                                           ###
@@ -290,7 +310,7 @@ MergeNzb=no
 # Set path to program, that must be executed before any file in incoming
 # directory (option <NzbDir>) is processed.
 #
-# Example: "NzbProcess=~/nzbprocess.sh".
+# Example: ~/nzbprocess.sh.
 #
 # That program can unpack archives which were put in incoming directory, make
 # filename cleanup, assign category and post-processing parameters to nzb-file
@@ -354,7 +374,7 @@ NzbProcess=
 # nzb incoming directory, via command line call "nzbget -A filename.nzb",
 # via RPC-method "append" or from web-interface.
 #
-# Example: "NzbAddedProcess=~/nzbaddedprocess.sh".
+# Example: ~/nzbaddedprocess.sh.
 #
 # That program can modify the files in download queue (for example
 # delete or pause all nfo, sfv, sample files) or do something else.
@@ -660,6 +680,11 @@ Category1.Name=Movies
 # destination directory.
 Category1.DestDir=
 
+# Default list of post-processing scripts.
+#
+# For more information see global option <DefScript>.
+Category1.DefScript=
+
 Category2.Name=Series
 Category3.Name=Music
 Category4.Name=Software
@@ -768,6 +793,75 @@ UpdateInterval=200
 
 
 ##############################################################################
+### SCHEDULER                                                              ###
+
+# This section defines scheduler commands.
+# For each command create a set of options <TaskX.Time>, <TaskX.Command>,
+# <TaskX.WeekDays> and <TaskX.DownloadRate>.
+# The following example shows how to throttle downloads in the daytime
+# by 100 KB/s and download at full speed overnights:
+
+# Time to execute the command (HH:MM).
+#
+# Multiple comma-separated values are accepted.
+# Asterix as hours-part means "every hour".
+#
+# Examples: "08:00", "00:00,06:00,12:00,18:00", "*:00", "*:00,*:30".
+#Task1.Time=08:00
+
+# Week days to execute the command (1-7).
+#
+# Comma separated list of week days numbers.
+# 1 is Monday.
+# Character '-' may be used to define ranges.
+#
+# Examples: "1-7", "1-5", "5,6", "1-5, 7".
+#Task1.WeekDays=1-7
+
+# Command to be executed (DownloadRate, PauseDownload, UnpauseDownload, PauseScan,
+# UnpauseScan, Process).
+#
+# Possible commands:
+#   DownloadRate    - sets download rate in KB/s;
+#   PauseDownload   - pauses download;
+#   UnpauseDownload - resumes download;
+#   PauseScan       - pauses scan of incoming nzb-directory;
+#   UnpauseScan     - resumes scan of incoming nzb-directory;
+#   Process         - executes external program.
+#Task1.Command=DownloadRate
+
+# Download rate to be set if the command is "DownloadRate" (kilobytes/sec).
+#
+# Value "0" means no speed control.
+#
+# If the option <TaskX.Command> is not set to "DownloadRate" this option
+# is ignored and can be omitted.
+#Task1.DownloadRate=100
+
+# Path to the program to execute if the command is "Process".
+#
+# Example: /home/user/fetch-nzb.sh.
+#
+# If the option <TaskX.Command> is not set to "Process" this option
+# is ignored and can be omitted.
+#
+# NOTE: It's allowed to add parameters to command line. If filename or
+# any parameter contains spaces it must be surrounded with single quotation
+# marks. If filename/parameter contains single quotation marks, each of them
+# must be replaced with two single quotation marks and the resulting filename/
+# parameter must be surrounded with single quotation marks.
+# Example: '/home/user/download/my scripts/task process.sh' 'world''s fun'.
+# In this example one parameter (world's fun) is passed to the script
+# (task process.sh).
+#Task1.Process=/home/user/script.sh
+
+#Task2.Time=20:00
+#Task2.WeekDays=1-7
+#Task2.Command=DownloadRate
+#Task2.DownloadRate=0
+
+
+##############################################################################
 ### PAR CHECK/REPAIR                                                       ###
 
 # How many par2-files to load (one, all, none).
@@ -867,7 +961,7 @@ ParTimeLimit=0
 # NOTE: If parchecker needs additional par-files it temporarily unpauses
 # the queue.
 #
-# NOTE: See also options <PostPauseQueue> and <UnpackPauseQueue>.
+# NOTE: See also options <ScriptPauseQueue> and <UnpackPauseQueue>.
 ParPauseQueue=no
 
 # Cleanup download queue after successful check/repair (yes, no).
@@ -901,7 +995,7 @@ Unpack=yes
 # Enable the option to give CPU more time for unpacking. That helps
 # to speed up unpacking on slow CPUs.
 #
-# NOTE: See also options <ParPauseQueue> and <PostPauseQueue>.
+# NOTE: See also options <ParPauseQueue> and <ScriptPauseQueue>.
 UnpackPauseQueue=no
 
 # Delete archive files after successful unpacking (yes, no).
@@ -909,7 +1003,7 @@ UnpackCleanupDisk=yes
 
 # Full path to unrar executable.
 #
-# Example: "/usr/bin/unrar".
+# Example: /usr/bin/unrar.
 #
 # If unrar is in your PATH you may leave the path part and set only
 # the executable name ("unrar" on POSIX or "unrar.exe" on Windows).
@@ -917,7 +1011,7 @@ UnrarCmd=unrar
 
 # Full path to 7-Zip executable.
 #
-# Example: "/usr/bin/7z".
+# Example: /usr/bin/7z.
 #
 # If 7-Zip binary is in your PATH you may leave the path part and set only
 # the executable name ("7z" or "7za" on POSIX or "7z.exe" on Windows).
@@ -925,26 +1019,36 @@ SevenZipCmd=7z
 
 
 ##############################################################################
-### POST-PROCESSING                                                        ###
+### POST-PROCESSING SCRIPTS                                                ###
 
-# Set path to program, that must be executed after the download of nzb-file
-# is completed and possibly par-checked/repaired and unpacked, depending 
-# on other options.
+# Default list of post-processing scripts to execute after the download
+# of nzb-file is completed and possibly par-checked/repaired and unpacked,
+# depending on other options.
 #
-# Example: "PostProcess=~/nzbget-postprocess.sh".
+# The scripts in the list must be separated with commas or semicolons. Only
+# filenames without path must be used. All scripts must be stored in directory
+# pointed by option <ScriptDir>. 
 #
-# NOTE: An example script is provided within distribution in file 
-# "nzbget-postprocess.sh".
+# Example: Cleanup.sh, Move.sh, EMail.py.
 #
-# NOTE: Since version 10.0 NZBGet has a built-in support for unpack
-# (option <Unpack>). In the previous versions unpack was performed by
-# post-processing scripts. If you use a script created for older NZBGet
-# version you need to disable the built-in unpack for script to operate
-# properly.
+# Each download (nzb-file) has its own list of post-processing scripts. The option
+# <DefScript> is the default value assigned to download when it is added to
+# queue. The list of post-processing scripts for a particular download can be
+# changed in the edit dialog in web-interface or using remote command "--edit/-E".
+#
+# When nzb-file is added to queue it can have a category assigned to it. In this
+# case the option <CategoryX.DefScript> (if not empty) overrides the
+# global option <DefScript>.
+#
+# NOTE: The script execution order is controlled by option <ScriptOrder>, not
+# by their order in option <DefScript>.
+#
+# NOTE: Changing options <DefScript> and <CategoryX.DefScript> doesn't affect
+# already queued downloads.
 #
 # INFO FOR DEVELOPERS:
-# The post-processing script is executed once per nzb-file after 
-# par-check/repair (if needed) and unpacking (if enabled).
+# NOTE: This is a short documentation, for more information visit
+# http://nzbget.sourceforge.net/Post-processing_scripts.
 #
 # NZBGet passes following arguments to post-processing script as environment
 # variables:
@@ -967,25 +1071,30 @@ SevenZipCmd=7z
 #                       1 = unpack failed;
 #                       2 = unpack successful.
 #
-# If nzb-file has associated postprocess-parameters (which can be set using
-# subcommand <O> of command <-E>, for example: NZBGet -E G O "myvar=hello !" 10)
-# or using XML-/JSON-RPC (for example via web-interface), they are also passed
-# as environment variables. These variables have prefix "NZBPR_" in their names.
-# For example, pp-parameter "myvar" will be passed as environment
-# variable "NZBPR_myvar".
+# If the script defines own options they are also passed as environment
+# variables. These variables have prefix "NZBPO_" in their names. For
+# example, option "myoption" will be passed as environment variable
+# "NZBPO_myoption" and in addition in uppercase as "NZBPO_MYOPTION".
 #
-# In addition to arguments and postprocess-parameters NZBGet passes all
-# nzbget.conf-options to postprocess-program as environment variables. These
+# If the script defines own post-processing parameters, they are also passed as
+# environment variables. These variables have prefix "NZBPR_" in their
+# names. For example, pp-parameter "myparam" will be passed as environment
+# variable "NZBPR_myparam" and in addition in uppercase as "NZBPR_MYPARAM".
+#
+# In addition to arguments, pp-options and pp-parameters NZBGet passes all
+# nzbget.conf-options to pp-script as environment variables. These
 # variables have prefix "NZBOP_" and are written in UPPER CASE. For Example
-# option "ParRepair" is passed as environment variable "NZBOP_PARREPAIR".
-# The dots in option names are replaced with underscores, for example
+# option "ParRepair" is passed as environment variable "NZBOP_PARREPAIR". The
+# dots in option names are replaced with underscores, for example
 # "SERVER1_HOST". For options with predefined possible values (yes/no, etc.)
 # the values are passed always in lower case.
 #
 # Return value: NZBGet processes the exit code returned by the script:
 #  93 - post-process successful (status = SUCCESS);
 #  94 - post-process failed (status = FAILURE);
-#  95 - post-process skipped (status = NONE);
+#  95 - post-process skipped (status = NONE). Use this code when you script
+#       terminates immediateley without doing any job and when this is not
+#       a failure termination;
 #  92 - request NZBGet to do par-check/repair for current nzb-file.
 # All other return codes are interpreted as "status unknown".
 #
@@ -994,7 +1103,23 @@ SevenZipCmd=7z
 # passed to history using a special prefix "[HISTORY]" by printing messages
 # to standard output. For example:
 #   echo "[ERROR] [HISTORY] Unpack failed, not enough disk space";
-PostProcess=
+#
+# NOTE: This is a short documentation, for more information visit
+# http://nzbget.sourceforge.net/Post-processing_scripts.
+DefScript=
+
+# Execution order for scripts.
+#
+# If you assign multiple scripts to one nzb-file, they are executed in the
+# order defined by this option. Scripts not listed here are executed at
+# the end in their alphabetical order.
+#
+# The scripts in the list must be separated with commas or semicolons. Only
+# filenames without path must be used. All scripts must be stored in directory
+# pointed by option <ScriptDir>. 
+#
+# Example: Cleanup.sh, Move.sh.
+ScriptOrder=
 
 # Pause download queue during executing of postprocess-script (yes, no).
 #
@@ -1002,73 +1127,4 @@ PostProcess=
 # to speed up postprocess on slow CPUs with fast connection (e.g. NAS-devices).
 #
 # NOTE: See also options <ParPauseQueue> and <UnpackPauseQueue>.
-PostPauseQueue=no
-
-
-##############################################################################
-### SCHEDULER                                                              ###
-
-# This section defines scheduler commands.
-# For each command create a set of options <TaskX.Time>, <TaskX.Command>,
-# <TaskX.WeekDays> and <TaskX.DownloadRate>.
-# The following example shows how to throttle downloads in the daytime
-# by 100 KB/s and download at full speed overnights:
-
-# Time to execute the command (HH:MM).
-#
-# Multiple comma-separated values are accepted.
-# Asterix as hours-part means "every hour".
-#
-# Examples: "08:00", "00:00,06:00,12:00,18:00", "*:00", "*:00,*:30".
-#Task1.Time=08:00
-
-# Week days to execute the command (1-7).
-#
-# Comma separated list of week days numbers.
-# 1 is Monday.
-# Character '-' may be used to define ranges.
-#
-# Examples: "1-7", "1-5", "5,6", "1-5, 7".
-#Task1.WeekDays=1-7
-
-# Command to be executed (DownloadRate, PauseDownload, UnpauseDownload, PauseScan,
-# UnpauseScan, Process).
-#
-# Possible commands:
-#   DownloadRate    - sets download rate in KB/s;
-#   PauseDownload   - pauses download;
-#   UnpauseDownload - resumes download;
-#   PauseScan       - pauses scan of incoming nzb-directory;
-#   UnpauseScan     - resumes scan of incoming nzb-directory;
-#   Process         - executes external program.
-#Task1.Command=DownloadRate
-
-# Download rate to be set if the command is "DownloadRate" (kilobytes/sec).
-#
-# Value "0" means no speed control.
-#
-# If the option <TaskX.Command> is not set to "DownloadRate" this option
-# is ignored and can be omitted.
-#Task1.DownloadRate=100
-
-# Path to the program to execute if the command is "Process".
-#
-# Example: "Task1.Process=/home/user/fetch-nzb.sh".
-#
-# If the option <TaskX.Command> is not set to "Process" this option
-# is ignored and can be omitted.
-#
-# NOTE: It's allowed to add parameters to command line. If filename or
-# any parameter contains spaces it must be surrounded with single quotation
-# marks. If filename/parameter contains single quotation marks, each of them
-# must be replaced with two single quotation marks and the resulting filename/
-# parameter must be surrounded with single quotation marks.
-# Example: '/home/user/download/my scripts/task process.sh' 'world''s fun'.
-# In this example one parameter (world's fun) is passed to the script
-# (task process.sh).
-#Task1.Process=/home/user/script.sh
-
-#Task2.Time=20:00
-#Task2.WeekDays=1-7
-#Task2.Command=DownloadRate
-#Task2.DownloadRate=0
+ScriptPauseQueue=no
