--- a/Makefile.in
+++ b/Makefile.in
@@ -62,7 +62,7 @@ host_triplet = @host@
 target_triplet = @target@
 bin_PROGRAMS = nzbget$(EXEEXT)
 DIST_COMMON = README $(am__configure_deps) $(dist_doc_DATA) \
-	$(dist_exampleconf_DATA) $(dist_webuiconf_DATA) \
+	$(dist_exampleconf_DATA) $(nobase_dist_ppscripts_SCRIPTS) \
 	$(nobase_dist_webui_DATA) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/config.h.in \
 	$(top_srcdir)/configure AUTHORS COPYING ChangeLog INSTALL NEWS \
@@ -77,10 +77,9 @@ am__CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
 mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = config.h
 CONFIG_CLEAN_FILES =
-am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)" \
+am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(ppscriptsdir)" \
 	"$(DESTDIR)$(sbindir)" "$(DESTDIR)$(docdir)" \
-	"$(DESTDIR)$(exampleconfdir)" "$(DESTDIR)$(webuiconfdir)" \
-	"$(DESTDIR)$(webuidir)"
+	"$(DESTDIR)$(exampleconfdir)" "$(DESTDIR)$(webuidir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 am_nzbget_OBJECTS = ArticleDownloader.$(OBJEXT) BinRpc.$(OBJEXT) \
@@ -101,9 +100,15 @@ am_nzbget_OBJECTS = ArticleDownloader.$(OBJEXT) BinRpc.$(OBJEXT) \
 	nzbget.$(OBJEXT)
 nzbget_OBJECTS = $(am_nzbget_OBJECTS)
 nzbget_LDADD = $(LDADD)
-binSCRIPT_INSTALL = $(INSTALL_SCRIPT)
+am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
+am__vpath_adj = case $$p in \
+    $(srcdir)/*) f=`echo "$$p" | sed "s|^$$srcdirstrip/||"`;; \
+    *) f=$$p;; \
+  esac;
+am__strip_dir = `echo $$p | sed -e 's|^.*/||'`;
+nobase_dist_ppscriptsSCRIPT_INSTALL = $(install_sh_SCRIPT)
 sbinSCRIPT_INSTALL = $(INSTALL_SCRIPT)
-SCRIPTS = $(bin_SCRIPTS) $(sbin_SCRIPTS)
+SCRIPTS = $(nobase_dist_ppscripts_SCRIPTS) $(sbin_SCRIPTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I.
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -118,18 +123,11 @@ CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
 SOURCES = $(nzbget_SOURCES)
 DIST_SOURCES = $(nzbget_SOURCES)
-am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
-am__vpath_adj = case $$p in \
-    $(srcdir)/*) f=`echo "$$p" | sed "s|^$$srcdirstrip/||"`;; \
-    *) f=$$p;; \
-  esac;
-am__strip_dir = `echo $$p | sed -e 's|^.*/||'`;
 dist_docDATA_INSTALL = $(INSTALL_DATA)
 dist_exampleconfDATA_INSTALL = $(INSTALL_DATA)
-dist_webuiconfDATA_INSTALL = $(INSTALL_DATA)
 nobase_dist_webuiDATA_INSTALL = $(install_sh_DATA)
 DATA = $(dist_doc_DATA) $(dist_exampleconf_DATA) \
-	$(dist_webuiconf_DATA) $(nobase_dist_webui_DATA)
+	$(nobase_dist_webui_DATA)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -257,7 +255,7 @@ nzbget_SOURCES = \
 	UrlCoordinator.cpp UrlCoordinator.h Unpack.cpp Unpack.h nzbget.cpp nzbget.h
 
 EXTRA_DIST = \
-	Makefile.cvs nzbgetd nzbget-postprocess.sh \
+	Makefile.cvs nzbgetd \
 	$(patches_FILES) $(windows_FILES)
 
 patches_FILES = \
@@ -271,7 +269,7 @@ doc_FILES = \
 	README ChangeLog COPYING
 
 exampleconf_FILES = \
-	nzbget.conf nzbget-postprocess.conf
+	nzbget.conf
 
 webui_FILES = \
 	webui/index.html webui/index.js webui/downloads.js webui/edit.js webui/fasttable.js \
@@ -284,17 +282,19 @@ webui_FILES = \
 	webui/img/download-anim-green-2x.png webui/img/download-anim-orange-2x.png \
 	webui/img/transmit-reload-2x.gif
 
+ppscripts_FILES = \
+	ppscripts/Cleanup.sh
+
 
 # Install
 sbin_SCRIPTS = nzbgetd
-bin_SCRIPTS = nzbget-postprocess.sh
 dist_doc_DATA = $(doc_FILES)
 exampleconfdir = $(datadir)/nzbget
 dist_exampleconf_DATA = $(exampleconf_FILES)
-webuiconfdir = $(datadir)/nzbget/webui
-dist_webuiconf_DATA = $(exampleconf_FILES)
 webuidir = $(datadir)/nzbget
 nobase_dist_webui_DATA = $(webui_FILES)
+ppscriptsdir = $(datadir)/nzbget
+nobase_dist_ppscripts_SCRIPTS = $(ppscripts_FILES)
 
 # Ignore "svn_version.cpp" in distcleancheck
 distcleancheck_listfiles = \
@@ -382,24 +382,30 @@ clean-binPROGRAMS:
 nzbget$(EXEEXT): $(nzbget_OBJECTS) $(nzbget_DEPENDENCIES) 
 	@rm -f nzbget$(EXEEXT)
 	$(CXXLINK) $(nzbget_LDFLAGS) $(nzbget_OBJECTS) $(nzbget_LDADD) $(LIBS)
-install-binSCRIPTS: $(bin_SCRIPTS)
+install-nobase_dist_ppscriptsSCRIPTS: $(nobase_dist_ppscripts_SCRIPTS)
 	@$(NORMAL_INSTALL)
-	test -z "$(bindir)" || $(mkdir_p) "$(DESTDIR)$(bindir)"
-	@list='$(bin_SCRIPTS)'; for p in $$list; do \
+	test -z "$(ppscriptsdir)" || $(mkdir_p) "$(DESTDIR)$(ppscriptsdir)"
+	@$(am__vpath_adj_setup) \
+	list='$(nobase_dist_ppscripts_SCRIPTS)'; for p in $$list; do \
+	  $(am__vpath_adj) p=$$f; \
 	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
 	  if test -f $$d$$p; then \
 	    f=`echo "$$p" | sed 's|^.*/||;$(transform)'`; \
-	    echo " $(binSCRIPT_INSTALL) '$$d$$p' '$(DESTDIR)$(bindir)/$$f'"; \
-	    $(binSCRIPT_INSTALL) "$$d$$p" "$(DESTDIR)$(bindir)/$$f"; \
+	    f=`echo "$$p" | sed 's|[^/]*$$||'`"$$f"; \
+	    echo " $(nobase_dist_ppscriptsSCRIPT_INSTALL) '$$d$$p' '$(DESTDIR)$(ppscriptsdir)/$$f'"; \
+	    $(nobase_dist_ppscriptsSCRIPT_INSTALL) "$$d$$p" "$(DESTDIR)$(ppscriptsdir)/$$f"; \
 	  else :; fi; \
 	done
 
-uninstall-binSCRIPTS:
+uninstall-nobase_dist_ppscriptsSCRIPTS:
 	@$(NORMAL_UNINSTALL)
-	@list='$(bin_SCRIPTS)'; for p in $$list; do \
+	@$(am__vpath_adj_setup) \
+	list='$(nobase_dist_ppscripts_SCRIPTS)'; for p in $$list; do \
+	  $(am__vpath_adj) p=$$f; \
 	  f=`echo "$$p" | sed 's|^.*/||;$(transform)'`; \
-	  echo " rm -f '$(DESTDIR)$(bindir)/$$f'"; \
-	  rm -f "$(DESTDIR)$(bindir)/$$f"; \
+	  f=`echo "$$p" | sed 's|[^/]*$$||'`"$$f"; \
+	  echo " rm -f '$(DESTDIR)$(ppscriptsdir)/$$f'"; \
+	  rm -f "$(DESTDIR)$(ppscriptsdir)/$$f"; \
 	done
 install-sbinSCRIPTS: $(sbin_SCRIPTS)
 	@$(NORMAL_INSTALL)
@@ -514,23 +520,6 @@ uninstall-dist_exampleconfDATA:
 	  echo " rm -f '$(DESTDIR)$(exampleconfdir)/$$f'"; \
 	  rm -f "$(DESTDIR)$(exampleconfdir)/$$f"; \
 	done
-install-dist_webuiconfDATA: $(dist_webuiconf_DATA)
-	@$(NORMAL_INSTALL)
-	test -z "$(webuiconfdir)" || $(mkdir_p) "$(DESTDIR)$(webuiconfdir)"
-	@list='$(dist_webuiconf_DATA)'; for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  f=$(am__strip_dir) \
-	  echo " $(dist_webuiconfDATA_INSTALL) '$$d$$p' '$(DESTDIR)$(webuiconfdir)/$$f'"; \
-	  $(dist_webuiconfDATA_INSTALL) "$$d$$p" "$(DESTDIR)$(webuiconfdir)/$$f"; \
-	done
-
-uninstall-dist_webuiconfDATA:
-	@$(NORMAL_UNINSTALL)
-	@list='$(dist_webuiconf_DATA)'; for p in $$list; do \
-	  f=$(am__strip_dir) \
-	  echo " rm -f '$(DESTDIR)$(webuiconfdir)/$$f'"; \
-	  rm -f "$(DESTDIR)$(webuiconfdir)/$$f"; \
-	done
 install-nobase_dist_webuiDATA: $(nobase_dist_webui_DATA)
 	@$(NORMAL_INSTALL)
 	test -z "$(webuidir)" || $(mkdir_p) "$(DESTDIR)$(webuidir)"
@@ -602,7 +591,7 @@ distclean-tags:
 distdir: $(DISTFILES)
 	$(am__remove_distdir)
 	mkdir $(distdir)
-	$(mkdir_p) $(distdir)/webui $(distdir)/webui/img $(distdir)/webui/lib
+	$(mkdir_p) $(distdir)/ppscripts $(distdir)/webui $(distdir)/webui/img $(distdir)/webui/lib
 	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
 	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
 	list='$(DISTFILES)'; for file in $$list; do \
@@ -733,7 +722,7 @@ check-am: all-am
 check: check-am
 all-am: Makefile $(PROGRAMS) $(SCRIPTS) $(DATA) config.h
 installdirs:
-	for dir in "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)" "$(DESTDIR)$(sbindir)" "$(DESTDIR)$(docdir)" "$(DESTDIR)$(exampleconfdir)" "$(DESTDIR)$(webuiconfdir)" "$(DESTDIR)$(webuidir)"; do \
+	for dir in "$(DESTDIR)$(bindir)" "$(DESTDIR)$(ppscriptsdir)" "$(DESTDIR)$(sbindir)" "$(DESTDIR)$(docdir)" "$(DESTDIR)$(exampleconfdir)" "$(DESTDIR)$(webuidir)"; do \
 	  test -z "$$dir" || $(mkdir_p) "$$dir"; \
 	done
 install: install-am
@@ -782,12 +771,12 @@ info: info-am
 info-am:
 
 install-data-am: install-dist_docDATA install-dist_exampleconfDATA \
-	install-dist_webuiconfDATA install-nobase_dist_webuiDATA
+	install-nobase_dist_ppscriptsSCRIPTS \
+	install-nobase_dist_webuiDATA
 	@$(NORMAL_INSTALL)
 	$(MAKE) $(AM_MAKEFLAGS) install-data-hook
 
-install-exec-am: install-binPROGRAMS install-binSCRIPTS \
-	install-sbinSCRIPTS
+install-exec-am: install-binPROGRAMS install-sbinSCRIPTS
 	@$(NORMAL_INSTALL)
 	$(MAKE) $(AM_MAKEFLAGS) install-exec-hook
 
@@ -816,9 +805,9 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-binPROGRAMS uninstall-binSCRIPTS \
-	uninstall-dist_docDATA uninstall-dist_exampleconfDATA \
-	uninstall-dist_webuiconfDATA uninstall-info-am \
+uninstall-am: uninstall-binPROGRAMS uninstall-dist_docDATA \
+	uninstall-dist_exampleconfDATA uninstall-info-am \
+	uninstall-nobase_dist_ppscriptsSCRIPTS \
 	uninstall-nobase_dist_webuiDATA uninstall-sbinSCRIPTS
 
 .PHONY: CTAGS GTAGS all all-am am--refresh check check-am clean \
@@ -827,19 +816,19 @@ uninstall-am: uninstall-binPROGRAMS uninstall-binSCRIPTS \
 	distclean distclean-compile distclean-generic distclean-hdr \
 	distclean-tags distcleancheck distdir distuninstallcheck dvi \
 	dvi-am html html-am info info-am install install-am \
-	install-binPROGRAMS install-binSCRIPTS install-data \
-	install-data-am install-data-hook install-dist_docDATA \
-	install-dist_exampleconfDATA install-dist_webuiconfDATA \
-	install-exec install-exec-am install-exec-hook install-info \
-	install-info-am install-man install-nobase_dist_webuiDATA \
-	install-sbinSCRIPTS install-strip installcheck installcheck-am \
-	installdirs maintainer-clean maintainer-clean-generic \
-	mostlyclean mostlyclean-compile mostlyclean-generic pdf pdf-am \
-	ps ps-am tags uninstall uninstall-am uninstall-binPROGRAMS \
-	uninstall-binSCRIPTS uninstall-dist_docDATA \
-	uninstall-dist_exampleconfDATA uninstall-dist_webuiconfDATA \
-	uninstall-info-am uninstall-nobase_dist_webuiDATA \
-	uninstall-sbinSCRIPTS
+	install-binPROGRAMS install-data install-data-am \
+	install-data-hook install-dist_docDATA \
+	install-dist_exampleconfDATA install-exec install-exec-am \
+	install-exec-hook install-info install-info-am install-man \
+	install-nobase_dist_ppscriptsSCRIPTS \
+	install-nobase_dist_webuiDATA install-sbinSCRIPTS \
+	install-strip installcheck installcheck-am installdirs \
+	maintainer-clean maintainer-clean-generic mostlyclean \
+	mostlyclean-compile mostlyclean-generic pdf pdf-am ps ps-am \
+	tags uninstall uninstall-am uninstall-binPROGRAMS \
+	uninstall-dist_docDATA uninstall-dist_exampleconfDATA \
+	uninstall-info-am uninstall-nobase_dist_ppscriptsSCRIPTS \
+	uninstall-nobase_dist_webuiDATA uninstall-sbinSCRIPTS
 
 
 # Note about "sed": 
@@ -858,12 +847,15 @@ install-exec-hook:
 	sed 's?/usr/local/bin?$(bindir)?' < "$(DESTDIR)$(sbindir)/nzbgetd.temp" > "$(DESTDIR)$(sbindir)/nzbgetd"
 	rm "$(DESTDIR)$(sbindir)/nzbgetd.temp"
 
-# Prepare example configuration files
+# Prepare example configuration file
 install-data-hook:
 	rm -f "$(DESTDIR)$(exampleconfdir)/nzbget.conf.temp"
 	cp "$(DESTDIR)$(exampleconfdir)/nzbget.conf" "$(DESTDIR)$(exampleconfdir)/nzbget.conf.temp"
-	sed 's:"nzbget-postprocess.sh":"nzbget-postprocess.sh" (installed into $(bindir)):' < "$(DESTDIR)$(exampleconfdir)/nzbget.conf" > "$(DESTDIR)$(exampleconfdir)/nzbget.conf.temp"
-	sed 's:^WebDir=:WebDir=$(webuidir)/webui:' < "$(DESTDIR)$(exampleconfdir)/nzbget.conf.temp" > "$(DESTDIR)$(exampleconfdir)/nzbget.conf"
+	sed 's:^ConfigTemplate=:ConfigTemplate=$(exampleconfdir)/nzbget.conf:' < "$(DESTDIR)$(exampleconfdir)/nzbget.conf.temp" > "$(DESTDIR)$(exampleconfdir)/nzbget.conf"
+	sed 's:configuration file (typically installed:configuration file (installed:' < "$(DESTDIR)$(exampleconfdir)/nzbget.conf" > "$(DESTDIR)$(exampleconfdir)/nzbget.conf.temp"
+	sed 's:/usr/local/share/nzbget/nzbget.conf):$(exampleconfdir)/nzbget.conf):' < "$(DESTDIR)$(exampleconfdir)/nzbget.conf.temp" > "$(DESTDIR)$(exampleconfdir)/nzbget.conf"
+	sed 's:^WebDir=:WebDir=$(webuidir)/webui:' < "$(DESTDIR)$(exampleconfdir)/nzbget.conf" > "$(DESTDIR)$(exampleconfdir)/nzbget.conf.temp"
+	sed 's:typically installed to /usr/local/share/nzbget/ppscripts:installed to $(ppscriptsdir)/ppscripts:' < "$(DESTDIR)$(exampleconfdir)/nzbget.conf.temp" > "$(DESTDIR)$(exampleconfdir)/nzbget.conf"
 	rm "$(DESTDIR)$(exampleconfdir)/nzbget.conf.temp"
 
 # Install configuration files into /etc
@@ -872,18 +864,9 @@ install-conf:
 	if test ! -f "$(DESTDIR)$(sysconfdir)/nzbget.conf" ; then \
 		$(mkinstalldirs) "$(DESTDIR)$(sysconfdir)" ; \
 		cp "$(DESTDIR)$(exampleconfdir)/nzbget.conf" "$(DESTDIR)$(sysconfdir)/nzbget.conf" ; \
-		rm -f "$(DESTDIR)$(sysconfdir)/nzbget.conf.temp" ; \
-		cp "$(DESTDIR)$(sysconfdir)/nzbget.conf" "$(DESTDIR)$(sysconfdir)/nzbget.conf.temp" ; \
-		sed 's:^PostProcess=:PostProcess=$(bindir)/nzbget-postprocess.sh:' < "$(DESTDIR)$(sysconfdir)/nzbget.conf.temp" > "$(DESTDIR)$(sysconfdir)/nzbget.conf" ; \
-		rm "$(DESTDIR)$(sysconfdir)/nzbget.conf.temp" ; \
-	fi
-	if test ! -f "$(DESTDIR)$(sysconfdir)/nzbget-postprocess.conf" ; then \
-		$(mkinstalldirs) "$(DESTDIR)$(sysconfdir)" ; \
-		cp "$(DESTDIR)$(exampleconfdir)/nzbget-postprocess.conf" "$(DESTDIR)$(sysconfdir)/nzbget-postprocess.conf" ; \
 	fi
 
 uninstall-conf:
-	rm -f "$(DESTDIR)$(sysconfdir)/nzbget-postprocess.conf"
 	rm -f "$(DESTDIR)$(sysconfdir)/nzbget.conf"
 
 # Determining subversion revision:
