added option <ExtCleanupDisk> to automatically delete unwanted files (with specified extensions) after successful par-check or unpack
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@645 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -976,6 +976,14 @@ ParCleanupQueue=yes
 # after successful check/repair.
 NzbCleanupDisk=no
 
+# File extensions to delete after successful check/repair.
+#
+# List of file extensions to delete after successful check/repair. Extensions
+# must be written without starting dots and separated with commas.
+#
+# Example: par2,sfv
+ExtCleanupDisk=par2,1,sfv
+
 
 ##############################################################################
 ### UNPACK                                                                 ###
