removed pp-script Cleanup.sh (its functionality is now part of the main program)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@646 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.in
+++ b/Makefile.in
@@ -283,7 +283,7 @@ webui_FILES = \
 	webui/img/transmit-reload-2x.gif
 
 ppscripts_FILES = \
-	ppscripts/Cleanup.sh ppscripts/EMail.py ppscripts/Logger.py
+	ppscripts/EMail.py ppscripts/Logger.py
 
 
 # Install
