added link to catalog of pp-scripts to web-interface
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@652 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1054,6 +1054,9 @@ SevenZipCmd=7z
 # NOTE: Changing options <DefScript> and <CategoryX.DefScript> doesn't affect
 # already queued downloads.
 #
+# NOTE: For the list of interesting post-processing scripts see
+# http://nzbget.sourceforge.net/Catalog_of_post-processing_scripts.
+#
 # INFO FOR DEVELOPERS:
 # NOTE: This is a short documentation, for more information visit
 # http://nzbget.sourceforge.net/Post-processing_scripts.
