small improvements in formatting of option descriptions in web-interface
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@659 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -321,7 +321,7 @@ MergeNzb=no
 # variables:
 #  NZBNP_DIRECTORY - path to directory, where file is located. It is a directory
 #                    specified by the option <NzbDir> or a subdirectory;
-#  NZBNP_FILENAME  - name of file to be processed;
+#  NZBNP_FILENAME  - name of file to be processed.
 #
 # In addition to these arguments NZBGet passes all
 # nzbget.conf-options to nzbprocess-program as environment variables. These
@@ -403,25 +403,23 @@ NzbProcess=
 #
 # Examples:
 # 1) pausing nzb-file using file-id:
-#  "$NZBOP_APPBIN" -c "$NZBOP_CONFIGFILE" -E G P $NZBNA_LASTID
-#
+# "$NZBOP_APPBIN" -c "$NZBOP_CONFIGFILE" -E G P $NZBNA_LASTID;
 # 2) setting category using nzb-name:
-# "$NZBOP_APPBIN" -c "$NZBOP_CONFIGFILE" -E GN K "my cat" "$NZBNA_NZBNAME"
-#
+# "$NZBOP_APPBIN" -c "$NZBOP_CONFIGFILE" -E GN K "my cat" "$NZBNA_NZBNAME";
 # 3) pausing files with extension "nzb":
-# "$NZBOP_APPBIN" -c "$NZBOP_CONFIGFILE" -E FR P "$NZBNA_NAME/.*\.nzb"
+# "$NZBOP_APPBIN" -c "$NZBOP_CONFIGFILE" -E FR P "$NZBNA_NAME/.*\.nzb";
 NzbAddedProcess=
 
 # Check for duplicate files (yes, no).
 #
 # If this option is enabled the program checks by adding of a new nzb-file:
 # 1) if nzb-file contains duplicate entries. This check aims on detecting
-#    of reposted files (if first file was not fully uploaded);
+#    of reposted files (if first file was not fully uploaded).
 #    If the program find two files with identical names, only the
 #    biggest of these files will be added to queue;
 # 2) if download queue already contains file with the same name;
 # 3) if destination file on disk already exists.
-# In last two cases: if the file exists it will not be added to queue;
+# In last two cases: if the file exists it will not be added to queue.
 #
 # If this option is disabled, all files are downloaded and duplicate files
 # are renamed to "filename_duplicate1".
@@ -466,9 +464,8 @@ RenameBroken=no
 # Decode articles (yes, no).
 #
 # yes - decode articles using internal decoder (supports yEnc and UU formats);
-# no - the articles will not be decoded and joined. External programs
-#      (like "uudeview") can be used to decode and join downloaded articles.
-#      Also useful for debugging to look at article's source text.
+# no - the articles will not be decoded and joined. Useful for debugging to
+#      look at article's source text.
 Decode=yes
 
 # Write decoded articles directly into destination output file (yes, no).
@@ -866,9 +863,10 @@ UpdateInterval=200
 
 # How many par2-files to load (one, all, none).
 #
-# one - only one main par2-file must be downloaded and other must be paused;
-# all - all par2-files must be downloaded;
-# none - all par2-files must be automatically paused.
+# One - only one main par2-file must be downloaded and other must be paused;
+# All - all par2-files must be downloaded;
+# None - all par2-files must be automatically paused.
+#
 # Paused files remain in queue and can be unpaused by parchecker when needed.
 LoadPars=one
 
@@ -911,18 +909,36 @@ ParRepair=yes
 # issues. Please apply the patches to libpar2 and recompile it.
 ParScan=auto
 
+# What files should be scanned during par-verification (limited,
+# full, auto).
+#
+#  Limited - scan only files belonging to the par-set;
+#  Full    - scan all files in the directory. This helps if the
+#            files were renamed after creating of par-set;
+#  Auto    - a limited scan is performed first. If the par-checker 
+#            detects missing files, it scans other files in the 
+#            directory until all required files are found.
+#
+# NOTE: for par-check/repair NZBGet uses library libpar2. The last and
+# widely used version 0.2 of the library has few bugs, sometimes causing
+# a crash of the program. This is especially true when using "full" or
+# "auto" par-scan. NZBGet is supplied with patches addressing these
+# issues. Please apply the patches to libpar2 and recompile it.
+ParScan=auto
+
 # Use only par2-files with matching names (yes, no).
 #
-# If par-check needs extra par-blocks it searches for par2-files
-# in download queue, which can be unpaused and used for restore.
-# These par2-files should have the same base name as the main par2-file,
-# currently loaded in par-checker. Sometimes extra par files (especially if
-# they were uploaded by a different poster) have not matching names.
-# Normally par-checker does not use these files, but you can allow it
-# to use these files by setting <StrictParName> to "no".
-# This has however a side effect: if NZB-file contains more than one collection
-# of files (with different par-sets), par-checker may download par-files from
-# a wrong collection. This increases you traffic (but not harm par-check).
+# If par-check needs extra par-blocks it looks for paused par2-files
+# in the download queue. These par2-files should have the same base name
+# as the main par2-file, currently loaded in par-checker. Sometimes extra
+# par2-files have non-matching names (especially if they were uploaded
+# by a different poster). Normally par-checker does not use these files, but
+# you can allow it to use them by setting <StrictParName> to "no".
+# There is a small side effect then: if NZB-file contains more than one
+# collection of files (with different par-sets), par-checker may download
+# par2-files from a wrong collection and will need to unpause other
+# par2-files until all required files are downloaded. This increases the
+# traffic (but not harm the par-check).
 #
 # NOTE: Par-checker always uses only par-files added from the same NZB-file
 # and the option <StrictParName> does not change this behavior.
@@ -1075,7 +1091,7 @@ SevenZipCmd=7z
 #                           not contain any par-files;
 #                       1 = checked and failed to repair;
 #                       2 = checked and successfully repaired;
-#                       3 = checked and can be repaired but repair is disabled.
+#                       3 = checked and can be repaired but repair is disabled;
 #  NZBPP_UNPACKSTATUS - result of unpack:
 #                       0 = unpack is disabled or was skipped due to nzb-file
 #                           properties or due to errors during par-check;
@@ -1107,6 +1123,7 @@ SevenZipCmd=7z
 #       terminates immediateley without doing any job and when this is not
 #       a failure termination;
 #  92 - request NZBGet to do par-check/repair for current nzb-file.
+#
 # All other return codes are interpreted as "status unknown".
 #
 # The return value is used to display the status of post-processing in
