improved par-check: added support for manual par-check; if option <ParCheck> is set to <Manual> and a damaged download is detected the program downloads all par2-files but doesn't perform par-check; the user must perform par-check/repair manually then (possibly on another, faster computer); old values <yes/no> of option <ParCheck> renamed to <Force> and <Auto> respectively; when set to <Force> all par2-files are always downloaded; removed option <LoadPars> since its functionality is now covered by option <ParCheck>; Result of par-check can now have new value <Manual repair necessary>; field <ParStatus> in RPC-method <history> can have new value <MANUAL>; parameter <NZBPP_PARSTATUS> for pp-script can have new value <4 = manual repair necessary>; extended pp-script <EMail.py> to handle ParStatus=4 (manual)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@660 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -861,53 +861,32 @@ UpdateInterval=200
 ##############################################################################
 ### PAR CHECK/REPAIR                                                       ###
 
-# How many par2-files to load (one, all, none).
+# Whether and how par-verification must be performed (auto, force, manual).
 #
-# One - only one main par2-file must be downloaded and other must be paused;
-# All - all par2-files must be downloaded;
-# None - all par2-files must be automatically paused.
+#  Auto   - par-check is performed when needed. One par2-file is always
+#           downloaded. Additional par2-files are downloaded if needed
+#           for repair. Repair is performed if the option <ParRepair>
+#           is enabled;
+#  Force  - force par-check for every download (even undamaged). All
+#           par2-files are always downloaded. Repair is performed if
+#           the option <ParRepair> is enabled;
+#  Manual - par-check is skipped. One par2-file is always
+#           downloaded. If a damaged download is detected, all
+#           par2-files are downloaded but neithet par-check nor par-repair
+#           take place. The download can be then repaired manually
+#           (possibly on another, faster computer).
 #
-# Paused files remain in queue and can be unpaused by parchecker when needed.
-LoadPars=one
+# NOTE: The option <RenameBroken> must be set to "no", otherwise the
+# par-checker may not find renamed files and fail.
+ParCheck=auto
 
-# Force par-verification (yes, no).
+# Automatic par-repair after par-verification (yes, no).
 #
-# Force par-check for every download. When set to "no" the par-check is
-# performed only if the unpacker or the post-processing script detect a
-# damaged download.
-#
-# To download only needed par2-files (smart par-files loading) set also
-# the option <LoadPars> to "one". If option <LoadPars> is set to "all",
-# all par2-files will be downloaded before verification and repair starts.
-# The option <RenameBroken> must be set to "no", otherwise the par-checker
-# may not find renamed files and fail.
-ParCheck=no
-
-# Automatic par-repair (yes, no).
-#
-# If option <ParCheck> is enabled and <ParRepair> is not, the program
-# only verifies downloaded files and downloads needed par2-files, but does
-# not start repair-process. This is useful if computer does not have
-# enough CPU power, since repairing of large files may take too much
-# resources and time on a slow computers.
+# If option <ParCheck> is set to "Auto" or "Force" this option defines
+# if the download must be repaired when needed. The option can be
+# disabled if computer does not have enough CPU power, since repairing
+# may take too much resources and time on a slow computers.
 ParRepair=yes
-
-# What files should be scanned during par-verification (limited,
-# full, auto).
-#
-#   limited - scan only files belonging to the par-set;
-#   full    - scan all files in the directory. This helps if the
-#             files were renamed after creating of par-set.
-#   auto    - a limited scan is performed first. If the par-checker 
-#             detects missing files, it scans other files in the 
-#             directory until all required files are found.
-#
-# NOTE: for par-check/repair NZBGet uses library libpar2. The last and
-# widely used version 0.2 of the library has few bugs, sometimes causing
-# a crash of the program. This is especially true when using "full" or
-# "auto" par-scan. NZBGet is supplied with patches addressing these
-# issues. Please apply the patches to libpar2 and recompile it.
-ParScan=auto
 
 # What files should be scanned during par-verification (limited,
 # full, auto).
@@ -1092,6 +1071,7 @@ SevenZipCmd=7z
 #                       1 = checked and failed to repair;
 #                       2 = checked and successfully repaired;
 #                       3 = checked and can be repaired but repair is disabled;
+#                       4 = par-check needed but skipped (option ParCheck=manual);
 #  NZBPP_UNPACKSTATUS - result of unpack:
 #                       0 = unpack is disabled or was skipped due to nzb-file
 #                           properties or due to errors during par-check;
