1) option <ExtCleanupDisk> now checks not only file extensions but any substring at the end of file name (in particular this allows to delete file _brokenlog.txt); 2) fixed: when option <InterDir> was used the files extracted from archives were not processed/deleted by option <ExtCleanupDisk>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@667 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -971,13 +971,14 @@ ParCleanupQueue=yes
 # after successful check/repair.
 NzbCleanupDisk=no
 
-# File extensions to delete after successful check/repair.
+# Files to delete after successful check/repair.
 #
-# List of file extensions to delete after successful check/repair. Extensions
-# must be written without starting dots and separated with commas.
+# List of file extensions or file names to delete after successful
+# check/repair. The entries must be separated with commas. The entries 
+# can be file extensions or any text the file name may end with.
 #
-# Example: par2,sfv
-ExtCleanupDisk=par2,1,sfv
+# Example: .par2, .sfv
+ExtCleanupDisk=.par2, .sfv, _brokenlog.txt
 
 
 ##############################################################################
