option <ControlPassword> can now be set to en empty value to disable authentication; useful if nzbget works behind other web-server with its own authentication
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@682 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -228,6 +228,8 @@ ControlPort=6789
 #
 # For authorization to web-interface use predefined username "nzbget" (not configurable)
 # and the password defined here.
+#
+# Set to empty value to disable authorization request.
 ControlPassword=tegbzn6789
 
 # Secure control of NZBGet server (yes, no).
