pp-scripts terminated with unknown status are now considered failed (status=FAILURE instead of status=UNKNOWN)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@686 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1107,13 +1107,7 @@ SevenZipCmd=7z
 #       a failure termination;
 #  92 - request NZBGet to do par-check/repair for current nzb-file.
 #
-# All other return codes are interpreted as "status unknown".
-#
-# The return value is used to display the status of post-processing in
-# a history view. In addition to status one or more text messages can be
-# passed to history using a special prefix "[HISTORY]" by printing messages
-# to standard output. For example:
-#   echo "[ERROR] [HISTORY] Unpack failed, not enough disk space";
+# All other return codes are interpreted as failure (status = FAILURE).
 #
 # NOTE: This is a short documentation, for more information visit
 # http://nzbget.sourceforge.net/Post-processing_scripts.
