the maximum number of download threads are now managed automatically taking into account the number of allowed connections to news servers; removed option <ThreadLimit>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@691 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -175,7 +175,7 @@ Server1.Encryption=no
 # select cipher for TLS" if the cipher string is not valid.
 Server1.Cipher=
 
-# Maximal number of simultaneous connections to this server (0-999).
+# Maximum number of simultaneous connections to this server (0-999).
 Server1.Connections=4
 
 # Second server, on level 0.
@@ -550,29 +550,6 @@ ConnectionTimeout=60
 # Do not use small values!
 TerminateTimeout=600
 
-# Set the (approximate) maximum number of allowed threads (10-999).
-#
-# Sometimes under certain circumstances the program may create way to many
-# download threads. Most of them are in wait-state. That is not bad,
-# but threads are usually a limited resource. If a program creates to many
-# of them, operating system may kill it. The option <ThreadLimit> prevents that.
-#
-# NOTE: The number of threads is not the same as the number of connections
-# opened to NNTP-servers. Do not use the option <ThreadLimit> to limit the
-# number of connections. Use the appropriate options <ServerX.Connections>
-# instead.
-#
-# NOTE: The actual number of created threads can be slightly larger as
-# defined by the option. Important threads may be created even if the
-# number of threads is exceeded. The option prevents only the creation of
-# additional download threads.
-#
-# NOTE: In most cases you should leave the default value "100" unchanged.
-# However you may increase that value if you need more than 90 connections
-# (that's very unlikely) or decrease the value if the OS does not allow so
-# many threads. But the most OSes should not have problems with 100 threads.
-ThreadLimit=100
-
 # Set the maximum download rate on program start (kilobytes/sec).
 #
 # Value "0" means no speed control.
@@ -651,7 +628,7 @@ DeleteCleanupDisk=no
 # that can be achieved with the option <ParCleanupQueue>.
 KeepHistory=7
 
-# Maximal number of simultaneous connections for nzb URL downloads (0-999).
+# Maximum number of simultaneous connections for nzb URL downloads (0-999).
 #
 # When NZB-files are added to queue via URL, the program downloads them
 # from the specified URL. The option limits the maximal number of connections
