new option "ControlUsername" to define login user name (if you don't like default username "nzbget")
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@705 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -224,10 +224,18 @@ ControlIP=0.0.0.0
 # communication see option <SecurePort>.
 ControlPort=6789
 
-# Password which NZBGet server and remote client use.
+# User name which NZBGet server and remote client use.
 #
-# For authorization to web-interface use predefined username "nzbget" (not configurable)
-# and the password defined here.
+# Set to empty value to disable user name check (check only password).
+#
+# NOTE: this option was added in NZBGet 11. Older versions used predefined
+# not changeable user name "nzbget". Third-party tools or web-sites written
+# for older NZBGet versions may not have an option to define user name. In
+# this case you should set option <ControlUsername> to the default value
+# "nzbget" or use empty value.
+ControlUsername=nzbget
+
+# Password which NZBGet server and remote client use.
 #
 # Set to empty value to disable authorization request.
 ControlPassword=tegbzn6789
@@ -263,7 +271,7 @@ SecureKey=
 # NOTE: This option has effect only if the program was started from
 # root-account, otherwise it is ignored and the daemon runs under
 # current user id.
-DaemonUserName=root
+DaemonUsername=root
 
 # Specify default umask (affects file permissions) for newly created
 # files, POSIX only (000-1000).
